Bug 166940 - Title size wrong on DOCX fileopen
Summary: Title size wrong on DOCX fileopen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: filter:docx
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2025-06-10 14:21 UTC by Timur
Modified: 2026-03-18 11:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample DOCX (91.21 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-06-10 14:21 UTC, Timur
Details
Sample in MSO (47.53 KB, image/jpeg)
2025-06-10 14:23 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-06-10 14:21:26 UTC
Created attachment 201183 [details]
Sample DOCX

Open DOCX and see title size is wrong. Should be large with font 36.
Title appeared in LO 7.3 and was 36 in latest. But missing again in 7.4 oldest and wrong in latest.
Comment 1 Timur 2025-06-10 14:23:14 UTC
Created attachment 201185 [details]
Sample in MSO
Comment 2 Telesto 2025-06-10 15:21:20 UTC
Confirm
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 17e8dbead42e2d4b55815b1b7b2846b03d62a15d
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

no title with
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 229123ccc6f90ebf66b3e659bebbd53f8a9bdd3a
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

title being OK with
Version: 7.3.8.0.0+ (x64) / LibreOffice Community
Build ID: e1ad83ddb2f39419fb5d7c69eba51e2b9f49c788
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 3 Commit Notification 2025-06-13 10:06:12 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aa689d596c44c1c51ab9345df5d063768936fe74

tdf#166940 sw: defer line break in ref field

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-06-16 07:34:16 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/5bfb41e13b59c882fc3e39c3b6e69c7038985283

tdf#166940 sw: defer line break in ref field

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Timur 2025-06-16 17:46:02 UTC
This seems fixed, anyone is welcome to verify.
Comment 6 Commit Notification 2025-06-25 12:16:21 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab1a81b1e3818deac87c21c1d98a546a23dd6ada

tdf#166940 sw: in docx field import use to outer char props

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-26 16:39:51 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6a11cc0c82954ef1ed0cc0915fbfe548692b0ddd

tdf#166940 sw: in docx field import use to outer char props

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.