tdf#166940 sw: defer line break in ref field

In Writer ref fields contain only text strings and it does not support
line breaks. So, to avoid misplacement of the content on load, we
defer the breaks until after the field is finished.

Change-Id: I3d9a78743deb0d4f7f187a5c59b58e74ae3b20d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186008
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit e0119fbf861af288e3efe55efcd9aa88adaff80f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186450
Tested-by: Jenkins
Reviewed-by: Jaume Pujantell <jaume.pujantell@collabora.com>
(cherry picked from commit aa689d596c44c1c51ab9345df5d063768936fe74)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186554